--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,14 +1,54 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Reviews</h1>
+<h1 class= "column">Reviews</h1>
 
-<div id="reviews">
-  <% @reviews.each do |review| %>
-    <%= render review %>
-    <p>
-      <%= link_to "Show this review", review %>
-    </p>
-  <% end %>
+<div class= "row right padm">
+    <%= search_form_for @q do |f| %>
+     <div class="large-5 small-4 columns">
+      <%= f.label :Order_by_rating %>
+      <%= f.select :rating_gteq, Highest_first: :asc, Lowest_First: :desc %>
+    </div>
+    <div class="large-5 small-4 columns">
+      <%= f.label :rating_minimum %>
+      <%= f.select :rating, options_from_collection_for_select(Review.all, "id", "rating")%>
+    <div>
+    <div class="large-5 small-4 columns">
+      <%= f.label :rating_lteq %>
+      <%= f.select :rating_lteq, minimum: :min, maximum: :max %>
+    </div>
+     <div class="large-5 small-4 columns">
+       <%= sort_link(@q, :review_created_at) do %>
+        <strong>Order by date:</strong>
+      <% end %>
+    <div>
+    <div class="large-5 small-4 columns">
+      <%= sort_link(@q, :text) do %>
+        <strong>Prioritize by text</strong>
+      <% end %>
+    </div>
+      <div class="large-5 small-4 columns">
+        <%= f.submit "Filter" %>
+      </div>
+    <%end %>
+
+  </div>
 </div>
 
-<%= link_to "New review", new_review_path %>
+<table>
+ <thead>
+  <tr>
+    <th><strong>Rating:</strong></th>
+    <th><strong>Text:</strong></th>
+    <th colspan = "3"></th>
+    </thead>
+<tbody>
+  <div id="reviews">
+    <% @reviews.each do |review| %>
+    <tr>
+      <td><%=review.rating%></td>
+      <td><%=review.text%></td>
+    </tr>
+    <% end %>
+  </div>
+  </tbody>
+</table>
