--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,40 +1,40 @@
 <p style="color: green"><%= notice %></p>
 
-<h1 class= "column">Reviews</h1>
+<h1 class= "d-flex align-items-center justify-content-center m-3">Reviews</h1>
 
-<div class= "row right padm">
+<div class= "d-flex align-items-center justify-content-center border border-3 m-3", style="border:solid">
     <%= search_form_for @q do |f| %>
-     <div class="large-5 small-4 columns">
-      <%= f.label :Order_by_rating %>
-      <%= sort_link(@q, :rating, %i(rating ),
+     <div class="d-flex justify-content-center border border-2 mt-3">
+      <%= f.label :Order_by_ %>
+      <%= sort_link(@q, :rating, %i( rating ),
         default_order: { rating: 'asc'}) %>
     </div>
-    <div class="large-5 small-4 columns">
-      <%= f.label :rating_minimum %>
+    <div class="d-flex justify-content-center border border-2">
+      <%= f.label :minimum_rating%>
       <%= f.select :rating_gteq, Review.pluck(:rating).uniq.sort %>
-    <div>
-     <div class="large-5 small-4 columns">
-       <%= sort_link(@q, :created_at) do %>
-        <strong>Order by date:</strong>
-      <% end %>
-    <div>
-    <div class="large-5 small-4 columns">
+    </div>
+      <div class="d-flex justify-content-center border border-2 " >
+        <%= sort_link(@q, :created_at) do %>
+          <strong>Click to order by date:</strong>
+        <% end %>
+      </div>
+    <div class="d-flex justify-content-center border border-2 ">
       <%= sort_link(@q, :text) do %>
-        <strong>Prioritize by text</strong>
+        <strong>Click to prioritize by text</strong>
       <% end %>
     </div>
-      <div class="large-5 small-4 columns">
-        <%= f.submit "Filter" %>
+      <div class=" d-flex justify-content-center m-3">
+        <%= f.submit "Filter", class: "btn btn-primary btn-sm " %>
       </div>
     <%end %>
 
   </div>
 </div>
 
-<table>
+<table class= "table table-striped" style="text-align: center ">
  <thead>
   <tr>
-    <th><strong>Rating:</strong></th>
+    <th scope= "col"><strong>Rating:</strong></th>
     <th><strong>Text:</strong></th>
     <th><strong>Created At:</strong></th>
     <th colspan = "3"></th>
@@ -43,9 +43,9 @@
   <div id="reviews">
     <% @reviews.each do |review| %>
     <tr>
-      <td><%=review.rating%></td>
-      <td><%=review.text%></td>
-      <td><%=review.created_at%></td>
+      <td ><%=review.rating%></td>
+      <td ><%=review.text%></td>
+      <td ><%=review.created_at%></td>
     </tr>
     <% end %>
   </div>
